# coredump

./: .gitignore  README.md
.github/prompts/: dev.prompt.md
demo/basic/: CMakeLists.txt  main.cpp
demo/crash/: CMakeLists.txt  libcrash.cpp  libcrash.h  main.cpp
docs/: dev-log.md  todo.md
gdb-notes/: 1-gdb-basic.md  2-core-dump.md
